--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -1,1 +1,23 @@
-<p>form1 works!</p>
+<div class="container">
+    <form action="">
+        <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input required ngModel name="firstName" id="firstName" type="text" class="form-control">
+            <div class="alert alert-danger"></div>
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input required ngModel name="lastName" id="lastName" type="text" class="form-control">
+            <div class="alert alert-danger"></div>
+        </div>
+        <div class="form-group">
+            <label for="authorName">Author Name(Pen Name)</label>
+            <input ngModel name="authorName" id="authorName" type="text" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="quote"></label>
+            <textarea required ngModel name="comment" id="quote" cols="30" rows="10"></textarea>
+        </div>
+        <button class="btn btn-primary">Submit Quote</button>
+    </form>
+</div>
