Generate component index.

--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -17,10 +17,13 @@
                 <input ngModel name="authorName" id="authorName" type="text" class="form-control">
             </div><br>
             <div class="form-group">
-                <label for="quote"></label>
+                <label for="quote">Please write your quote below</label>
                 <textarea required ngModel name="comment" id="quote" cols="30" rows="10"></textarea>
             </div>
-            <button class="btn btn-primary">Submit Quote</button>
+            <div class="button">
+                <button class="btn btn-primary">Submit Quote</button>
+            </div>
+
         </form>
     </div>
 </body>
