--- a/src/app/form/form1/form1.component.css
+++ b/src/app/form/form1/form1.component.css
@@ -24,7 +24,27 @@ body {
 .container .title::before {
     content: '';
     position: absolute;
+    left: 0;
+    bottom: 0;
     height: 3px;
     width: 30px;
-    background: #9b59b6;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+
+.container .form-group {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.button {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
