Added type submit to the submit button.

--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -20,9 +20,9 @@
                 <label for="quote">Please write your quote below</label>
                 <textarea required ngModel name="comment" id="quote" cols="30" rows="10"></textarea>
             </div>
-            <div class="button">
-                <button class="btn btn-primary">Submit Quote</button>
-            </div>
+
+            <button class="btn btn-primary" type="submit">Submit Quote</button>
+
 
         </form>
     </div>
