--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="container">
-        <form action="">
+        <form #userForm="ngForm">
             <div class="title">New Quote</div>
             <div class="form-group">
                 <label for="firstName">First Name</label>
@@ -18,7 +18,7 @@
             </div><br>
             <div class="form-group">
                 <label for="quote">Please write your quote below</label>
-                <textarea required ngModel name="comment" id="quote" cols="30" rows="10"></textarea>
+                <input required ngModel name="quote" id="quote" type="text" class="form-control">
             </div>
 
             <button class="btn btn-primary" type="submit">Submit Quote</button>
