--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="container">
-        <form #userForm="ngForm">
+        <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
             <div class="title">New Quote</div>
             <div class="form-group">
                 <label for="firstName">First Name</label>
@@ -21,7 +21,7 @@
                 <input required ngModel name="quote" id="quote" type="text" class="form-control">
             </div>
 
-            <button class="btn btn-primary" type="submit">Submit Quote</button>
+            <button [disabled]="userForm.form.invalid" btn btn-primary type="submit ">Submit Quote</button>
 
 
         </form>
