--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -20,9 +20,9 @@
                 <label for="quote">Please write your quote below</label>
                 <input required ngModel name="quote" id="quote" type="text" class="form-control">
             </div>
-
-            <button [disabled]="userForm.form.invalid" btn btn-primary type="submit ">Submit Quote</button>
-
+            <div class="button">
+                <button class="button1" [disabled]="userForm.form.invalid" btn btn-primary type="submit ">Submit Quote</button>
+            </div>
 
         </form>
     </div>
