--- a/src/app/form/form1/form1.component.html
+++ b/src/app/form/form1/form1.component.html
@@ -1,27 +1,27 @@
 <body>
     <div class="container">
-        <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
+        <form (ngSubmit)="onSubmit()" #userForm="ngForm" novalidate>
             <div class="title">New Quote</div>
             <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input required ngModel name="firstName" id="firstName" type="text" class="form-control">
+                <input [(ngModel)]="newUser.firstName" name=" firstName " id="firstName " type="text " class="form-control " required>
 
             </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input required ngModel name="lastName" id="lastName" type="text" class="form-control">
+            <div class="form-group ">
+                <label for="lastName ">Last Name</label>
+                <input [(ngModel)]="newUser.lastName" name="lastName " id="lastName " type="text " class="form-control " required>
 
             </div>
-            <div class="form-group">
-                <label for="authorName">Author Name(Pen Name)</label>
-                <input ngModel name="authorName" id="authorName" type="text" class="form-control">
+            <div class="form-group ">
+                <label for="authorName ">Author Name(Pen Name)</label>
+                <input [(ngModel)]="newUser.authorName" name="authorName " id="authorName " type="text " class="form-control " required>
             </div><br>
-            <div class="form-group">
-                <label for="quote">Please write your quote below</label>
-                <input required ngModel name="quote" id="quote" type="text" class="form-control">
+            <div class="form-group ">
+                <label for="quote ">Please write your quote below</label>
+                <input [(ngModel)]="newUser.quote" name="quote " id="quote " type="text " class="form-control " required>
             </div>
-            <div class="button">
-                <button class="button1" [disabled]="userForm.form.invalid" btn btn-primary type="submit ">Submit Quote</button>
+            <div class="button ">
+                <button class="button1 " btn btn-primary type="submit ">Submit Quote</button>
             </div>
 
         </form>
